--- a/Lab11/package.json
+++ b/Lab11/package.json
@@ -1,6 +1,16 @@
 {
   "dependencies": {
-    "jquery": "^3.6.3",
+    "jquery": "^3.7.1",
     "json-server": "^0.17.1"
-  }
+  },
+  "name": "lab11",
+  "version": "1.0.0",
+  "main": "week11Lab.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
